# pyglui

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  cgl.pxd  gl_utils.pxd  glew_pxd.py  pyglui.pxd  pyglui.pyx  pyproject.toml  setup.cfg  setup.py  tox.ini  ui.c  ui.pyx
.github/workflows/: build-and-deploy.yml  update-font.yml
example/: example.py  glfw.py
pyglui/: __init__.py  custom.pxi  design_params.pxi  gldraw.pxd  gldraw.pxi  graph.pyx  helpers.pxi  menus.pxi  timelines.pxi  ui.pyx  ui_elements.pxi  version.pxi
pyglui/cygl/: LICENSE  README.md  glew_pxd.py  setup.py  shader.pxd  shader.pyx  utils.pxd  utils.pyx
pyglui/pyfontstash/: LICENSE  cfontstash.pxd  fontstash.pxd  fontstash.pyx  setup.py
scripts/: glew_pxd.py
src/pyglui/: gldraw.pxi  graph.pyx  helpers.pxi  menus.pxi  timelines.pxi  ui.pyx  ui_elements.pxi
src/pyglui/cygl/: README.md  shader.pxd
src/pyglui/pyfontstash/: README.md  cfontstash.pxd  setup.py
tests/: test_fonts.py  test_imports.py  test_ui_elements.py
