[metadata]
name = pyglui
version = 1.30.0
description = OpenGL UI powered by Cython
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pupil-labs/pyglui
author = Pupil Labs GmbH
author_email = pypi@pupil-labs.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Changelog=https://github.com/pupil-labs/pyglui/blob/master/CHANGELOG.md

[options]
packages = find:
install_requires =
    cysignals;platform_system != "Windows"
python_requires = >=3.6
include_package_data = True
package_dir =
    pyglui=pyglui
zip_safe = False

[options.extras_require]
deploy =
    build
    bump2version
dev =
    pre-commit
    tox
examples =
    glfw
    numpy
    psutil
    pyopengl

[options.package_data]
pyglui =
    *.ttf
    *.pxd
    *.pyx
    *.pxi
    *.h
    *.c
    *.cpp

[tox:tox]
envlist = py36, py37, py38, py39
skip_missing_interpreters = true
isolated_build = true

[testenv]
changedir = tests
deps =
    pytest
