[metadata]
name = pyglui
description = OpenGL UI powered by Cython
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pupil-labs/pyglui
author = Pupil Labs GmbH
author_email = pypi@pupil-labs.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Changelog=https://github.com/pupil-labs/pyglui/blob/master/CHANGELOG.md

[options]
packages = find:
install_requires =
    numpy
    cysignals;platform_system != "Windows"
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
deploy =
    build
    bump2version
dev =
    pre-commit
    tox
examples =
    glfw
    numpy
    psutil
    pyopengl
test =
    glfw

[options.package_data]
pyglui =
    *.ttf
    *.pxd
    *.pyx
    *.pxi
    *.h
    *.c
    *.cpp
